Payment Methods and other features are added