@@ -3,10 +3,8 @@ package revpay.dao.impl;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.sql.Statement;
-import java.sql.Types;
 import java.util.ArrayList;
+import java.util.Date;
 import java.util.List;
 
 import revpay.dao.TransactionDao;
@@ -15,114 +13,130 @@ import revpay.util.DBConnection;
 
 public class TransactionDaoImpl implements TransactionDao {
 
-    public long createTransaction(Transaction txn) {
-        String sql = "INSERT INTO TRANSACTIONS (TRANSACTION_ID, FROM_USER_ID, TO_USER_ID, AMOUNT, CURRENCY, TYPE, STATUS, NOTE, CREATED_AT) "
-                   + "VALUES (SEQ_TRANSACTIONS.NEXTVAL, ?, ?, ?, ?, ?, ?, ?, SYSDATE)";
+    private Transaction map(ResultSet rs) throws Exception {
+        Transaction t = new Transaction();
 
-        Connection conn = null;
-        Statement st = null;
-        PreparedStatement ps = null;
-        ResultSet rs = null;
-        long newId = -1;
+        // ✅ FIX: Use TRANSACTION_ID (not TXN_ID)
+        t.setTransactionId(rs.getLong("TRANSACTION_ID"));
 
-        try {
-            conn = DBConnection.getConnection();
+        // Handle possible NULLs safely (Oracle getLong returns 0 when NULL)
+        long fromId = rs.getLong("FROM_USER_ID");
+        if (rs.wasNull()) t.setFromUserId(null);
+        else t.setFromUserId(fromId);
 
-            st = conn.createStatement();
-            rs = st.executeQuery("SELECT SEQ_TRANSACTIONS.NEXTVAL FROM DUAL");
-            if (rs.next()) {
-                newId = rs.getLong(1);
-            }
-            rs.close();
-            rs = null;
-            st.close();
-            st = null;
+        long toId = rs.getLong("TO_USER_ID");
+        if (rs.wasNull()) t.setToUserId(null);
+        else t.setToUserId(toId);
 
-            ps = conn.prepareStatement(sql);
-
-            if (txn.getFromUserId() == null) {
-                ps.setNull(1, Types.NUMERIC);
-            } else {
-                ps.setLong(1, txn.getFromUserId().longValue());
-            }
-
-            if (txn.getToUserId() == null) {
-                ps.setNull(2, Types.NUMERIC);
-            } else {
-                ps.setLong(2, txn.getToUserId().longValue());
-            }
-
-            ps.setDouble(3, txn.getAmount());
-            ps.setString(4, txn.getCurrency());
-            ps.setString(5, txn.getType());
-            ps.setString(6, txn.getStatus());
-            ps.setString(7, txn.getNote());
-            ps.executeUpdate();
-
-        } catch (SQLException e) {
-            e.printStackTrace();
-        } finally {
-            close(rs, ps, conn);
-        }
-
-        return newId;
+        t.setAmount(rs.getDouble("AMOUNT"));
+        t.setType(rs.getString("TYPE"));
+        t.setStatus(rs.getString("STATUS"));
+        t.setNote(rs.getString("NOTE"));
+        t.setRefId(rs.getString("REF_ID"));
+        t.setCreatedAt(rs.getDate("CREATED_AT"));
+        return t;
     }
 
-    public List<Transaction> findByUserId(long userId) {
-        String sql = "SELECT * FROM TRANSACTIONS "
-                   + "WHERE FROM_USER_ID = ? OR TO_USER_ID = ? "
-                   + "ORDER BY CREATED_AT DESC";
+    @Override
+    public void createTransaction(long fromUserId, long toUserId, double amount,
+                                  String type, String status, String note, String refId) {
 
-        Connection conn = null;
-        PreparedStatement ps = null;
-        ResultSet rs = null;
+        // ✅ FIX: Use TRANSACTION_ID (not TXN_ID)
+        String sql = "INSERT INTO TRANSACTIONS "
+                + "(TRANSACTION_ID, FROM_USER_ID, TO_USER_ID, AMOUNT, TYPE, STATUS, NOTE, REF_ID, CREATED_AT) "
+                + "VALUES (SEQ_TRANSACTIONS.NEXTVAL, ?, ?, ?, ?, ?, ?, ?, SYSDATE)";
+
+        try (Connection conn = DBConnection.getConnection();
+             PreparedStatement ps = conn.prepareStatement(sql)) {
+
+            ps.setLong(1, fromUserId);
+            ps.setLong(2, toUserId);
+            ps.setDouble(3, amount);
+            ps.setString(4, type);
+            ps.setString(5, status);
+            ps.setString(6, note);
+            ps.setString(7, refId);
+
+            ps.executeUpdate();
+
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+
+    @Override
+    public List<Transaction> searchTransactions(long userId,
+                                               String type,
+                                               String status,
+                                               Date fromDate,
+                                               Date toDate,
+                                               Double minAmount,
+                                               Double maxAmount,
+                                               String keyword) {
+
         List<Transaction> list = new ArrayList<Transaction>();
 
-        try {
-            conn = DBConnection.getConnection();
-            ps = conn.prepareStatement(sql);
-            ps.setLong(1, userId);
-            ps.setLong(2, userId);
-            rs = ps.executeQuery();
-            while (rs.next()) {
-                Transaction t = new Transaction();
-                t.setTransactionId(rs.getLong("TRANSACTION_ID"));
+        StringBuilder sql = new StringBuilder();
+        sql.append("SELECT * FROM TRANSACTIONS WHERE (FROM_USER_ID = ? OR TO_USER_ID = ?)");
 
-                long fromId = rs.getLong("FROM_USER_ID");
-                if (rs.wasNull()) {
-                    t.setFromUserId(null);
-                } else {
-                    t.setFromUserId(new Long(fromId));
-                }
+        List<Object> params = new ArrayList<Object>();
+        params.add(Long.valueOf(userId));
+        params.add(Long.valueOf(userId));
 
-                long toId = rs.getLong("TO_USER_ID");
-                if (rs.wasNull()) {
-                    t.setToUserId(null);
-                } else {
-                    t.setToUserId(new Long(toId));
-                }
+        if (type != null && type.trim().length() > 0) {
+            sql.append(" AND TYPE = ?");
+            params.add(type.trim().toUpperCase());
+        }
+        if (status != null && status.trim().length() > 0) {
+            sql.append(" AND STATUS = ?");
+            params.add(status.trim().toUpperCase());
+        }
+        if (fromDate != null) {
+            sql.append(" AND CREATED_AT >= ?");
+            params.add(new java.sql.Date(fromDate.getTime()));
+        }
+        if (toDate != null) {
+            sql.append(" AND CREATED_AT <= ?");
+            params.add(new java.sql.Date(toDate.getTime()));
+        }
+        if (minAmount != null) {
+            sql.append(" AND AMOUNT >= ?");
+            params.add(minAmount);
+        }
+        if (maxAmount != null) {
+            sql.append(" AND AMOUNT <= ?");
+            params.add(maxAmount);
+        }
+        if (keyword != null && keyword.trim().length() > 0) {
+            sql.append(" AND (UPPER(NOTE) LIKE ? OR UPPER(TYPE) LIKE ? OR UPPER(STATUS) LIKE ?)");
+            String k = "%" + keyword.trim().toUpperCase() + "%";
+            params.add(k);
+            params.add(k);
+            params.add(k);
+        }
 
-                t.setAmount(rs.getDouble("AMOUNT"));
-                t.setCurrency(rs.getString("CURRENCY"));
-                t.setType(rs.getString("TYPE"));
-                t.setStatus(rs.getString("STATUS"));
-                t.setNote(rs.getString("NOTE"));
-                t.setCreatedAt(rs.getTimestamp("CREATED_AT"));
+        // ✅ FIX: ORDER BY TRANSACTION_ID (not TXN_ID)
+        sql.append(" ORDER BY TRANSACTION_ID DESC");
 
-                list.add(t);
+        try (Connection conn = DBConnection.getConnection();
+             PreparedStatement ps = conn.prepareStatement(sql.toString())) {
+
+            for (int i = 0; i < params.size(); i++) {
+                Object p = params.get(i);
+                if (p instanceof Long) ps.setLong(i + 1, ((Long) p).longValue());
+                else if (p instanceof Double) ps.setDouble(i + 1, ((Double) p).doubleValue());
+                else if (p instanceof java.sql.Date) ps.setDate(i + 1, (java.sql.Date) p);
+                else ps.setString(i + 1, String.valueOf(p)); // keep as string
             }
-        } catch (SQLException e) {
+
+            try (ResultSet rs = ps.executeQuery()) {
+                while (rs.next()) list.add(map(rs));
+            }
+
+        } catch (Exception e) {
             e.printStackTrace();
-        } finally {
-            close(rs, ps, conn);
         }
 
         return list;
-    }
-
-    private void close(ResultSet rs, java.sql.Statement st, Connection conn) {
-        try { if (rs != null) rs.close(); } catch (Exception e) {}
-        try { if (st != null) st.close(); } catch (Exception e) {}
-        try { if (conn != null) conn.close(); } catch (Exception e) {}
     }
 }
